--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "npm run lint && jest"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.21.1",
     "cookie-universal-nuxt": "^2.1.4",
     "defu": "^5.0.0",
     "destr": "^1.1.0",
