--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@badaso/nuxt",
-  "version": "1.0.0-rc.1",
-  "description": "Nuxt module for integration with badaso out of the box.",
+  "version": "1.0.0-rc.2",
+  "description": "Nuxt integration with badaso.",
   "repository": {
     "type": "git",
     "url": "git://github.com/uasoft-indonesia/badaso-nuxt.git"
